[tool.poetry]
name = "geoplot"
version = "0.1.0"
description = "geometric art, mostly from scratch"
authors = ["Kevin C <kvnchv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
pytest = "^7.2.1"
mypy = "^0.991"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"